--- a/main.html
+++ b/main.html
@@ -8,8 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div>
+        <p>First Paragraph</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum aperiam ducimus est facere debitis qui atque deleniti eius necessitatibus, praesentium explicabo, excepturi vel deserunt.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias laudantium cupiditate sint voluptate accusantium autem necessitatibus eius aut beatae repellat.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed dolorum pariatur quod non, odio architecto totam, possimus laborum animi, quibusdam ipsa quae.</p>
+    </div>
+    <div>
+        <ul>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+            <li>Fourth Item</li>
+            <li>Fifth Item</li>
+        </ul>
+    </div>
+    
+<script type="text/javascript" src="./script.js"></script>
 
 </body>
 
