--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background:rgb(135, 206, 235);">
+<body>
 	<!-- the entire body must be written by student -->
     <div>
         <p>First Paragraph</p>
